<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_update">

        <CheckBoxPreference
            android:key="enable_warning"
            android:summary="@string/pref_warning_description"
            android:title="@string/pref_warning_title" />
        <CheckBoxPreference
            android:key="disable_rapid"
            android:summary="@string/pref_rapid_description"
            android:title="@string/pref_rapid_title" />
        <CheckBoxPreference
            android:key="enable_intents"
            android:summary="@string/pref_intents_description"
            android:title="@string/pref_intents_title" />
        <Preference
            android:key="reset_ignore"
            android:summary="@string/pref_reset_ignore_description"
            android:title="@string/pref_reset_ignore_title" />
        <Preference
            android:key="save_state"
            android:summary="@string/pref_save_state_description"
            android:title="@string/pref_save_state_title" />
        <Preference
            android:key="restore_state"
            android:summary="@string/pref_restore_state_description"
            android:title="@string/pref_restore_state_title" />


    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_debug">

        <CheckBoxPreference
            android:key="enable_spam"
            android:summary="@string/pref_debug_description"
            android:title="@string/pref_debug_title" />
        <!--<Preference-->
            <!--android:key="trigger_experiment"-->
            <!--android:summary="Installs old Skype version (5.1.0.58677 from January 20, 2015) from Playstore."-->
            <!--android:title="Test" />-->

    </PreferenceCategory>

</PreferenceScreen>